tests/test_assets/semantics/arrays/pass/indexing.cog
values: i32[3];

values[0];
values[1];
values[2];

i: i32 = 1;
values[i];