tests/test_assets/semantics/arrays/fail/string_initializer_element_type.cog
values: i32[6] = "hello";